<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RTSP Viewer</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_full">Fullscreen</string>
    <string name="button_select">Select</string>
    <string name="button_list">List</string>
    <string name="button_cancel">Cancel</string>
    <string name="filechooser_name">Select a file</string>
    <string name="confmanager_name">Configuration manager</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder cannot be read</string>
    <string name="icon">Icon</string>
    <string name="mgrnew">New</string>
    <string name="mgrnodata">No data</string>
    <string name="mgrcancel">Cancel</string>
    <string name="edit_entry">Edit</string>
    <string name="delete_entry">Delete</string>
    <string name="manageentry_name">Name</string>
    <string name="manageentry_uri">Uri</string>
    <string name="manageentry_user">Username</string>
    <string name="manageentry_pass">Password</string>
    <string name="manageentry_uri_hint">rtsp URL rtsp[t|h]://IP/path[?options]</string>
</resources>
