<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageentry_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_Uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageentry_uri"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_Uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manageentry_uri_hint" />

        <TextView
            android:id="@+id/TextView_User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageentry_user"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageentry_pass"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </LinearLayout>

</ScrollView>
